--- a/Thred/FeaturedCell.xib
+++ b/Thred/FeaturedCell.xib
@@ -4,7 +4,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
-        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -17,35 +16,35 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="FeaturedCell" id="gTV-IL-0wX" customClass="FeaturedCell" customModule="Thred" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="374"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="320"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="374"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="320"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VN4-zW-o2C">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="374"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="320"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="VLq-qe-B1t">
-                                <rect key="frame" x="20" y="20" width="280" height="334"/>
+                                <rect key="frame" x="20" y="20" width="280" height="280"/>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hOr-dI-5vh">
-                                <rect key="frame" x="0.0" y="290" width="320" height="84"/>
+                                <rect key="frame" x="0.0" y="248" width="320" height="72"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Pal-Rc-9cq">
-                                        <rect key="frame" x="20" y="5" width="280" height="74"/>
+                                        <rect key="frame" x="20" y="5" width="280" height="62"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="06u-SW-5Uv">
-                                                <rect key="frame" x="0.0" y="0.0" width="280" height="49"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="280" height="37"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="bIz-t0-eFL">
-                                                        <rect key="frame" x="0.0" y="0.0" width="280" height="25"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="280" height="19"/>
                                                         <fontDescription key="fontDescription" name="NexaW01-Heavy" family="NexaW01-Heavy" pointSize="17"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Price" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="1ML-6P-sh8">
-                                                        <rect key="frame" x="0.0" y="25" width="280" height="24"/>
+                                                        <rect key="frame" x="0.0" y="19" width="280" height="18"/>
                                                         <fontDescription key="fontDescription" name="NexaW01-Heavy" family="NexaW01-Heavy" pointSize="16"/>
                                                         <color key="textColor" systemColor="secondaryLabelColor" red="0.23529411759999999" green="0.23529411759999999" blue="0.26274509800000001" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <nil key="highlightedColor"/>
@@ -53,7 +52,7 @@
                                                 </subviews>
                                             </stackView>
                                             <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TpJ-BC-8mk">
-                                                <rect key="frame" x="0.0" y="49" width="280" height="25"/>
+                                                <rect key="frame" x="0.0" y="37" width="280" height="25"/>
                                                 <subviews>
                                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="liked" translatesAutoresizingMaskIntoConstraints="NO" id="itW-1o-0fP">
                                                         <rect key="frame" x="0.0" y="0.0" width="25" height="25"/>
@@ -94,9 +93,7 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HlO-tw-mBE" customClass="CircularProgress" customModule="Thred" customModuleProvider="target">
-                                <rect key="frame" x="140" y="167" width="40" height="40"/>
-                                <color key="backgroundColor" name="LoadingColor"/>
-                                <color key="tintColor" name="LoadingColor"/>
+                                <rect key="frame" x="140" y="140" width="40" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="40" id="gtT-9G-y9h"/>
                                     <constraint firstAttribute="width" secondItem="HlO-tw-mBE" secondAttribute="height" multiplier="1:1" id="zre-Fr-mDz"/>
@@ -125,7 +122,7 @@
                 <constraint firstItem="VN4-zW-o2C" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="d5Z-1k-etK"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
-            <size key="customSize" width="320" height="374"/>
+            <size key="customSize" width="320" height="320"/>
             <connections>
                 <outlet property="circularProgress" destination="HlO-tw-mBE" id="kE9-2Y-YDe"/>
                 <outlet property="imageView" destination="VLq-qe-B1t" id="BHJ-gj-kbg"/>
@@ -134,13 +131,10 @@
                 <outlet property="nameLbl" destination="bIz-t0-eFL" id="rUW-2v-QaX"/>
                 <outlet property="priceLbl" destination="1ML-6P-sh8" id="R8W-fY-3gT"/>
             </connections>
-            <point key="canvasLocation" x="95.652173913043484" y="70.3125"/>
+            <point key="canvasLocation" x="95.652173913043484" y="52.232142857142854"/>
         </collectionViewCell>
     </objects>
     <resources>
         <image name="liked" width="600" height="600"/>
-        <namedColor name="LoadingColor">
-            <color red="0.090000003576278687" green="0.75" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
     </resources>
 </document>
